fix(marge): curate PROMPT.md first, then pick by priority from full backlog

--- a/ralph.yml
+++ b/ralph.yml
@@ -58,10 +58,10 @@ hats:
       You are Marge — the organizer. Your job is to ensure work is well-defined before anyone touches code.
 
       ## Process
-      1. Check docs/todo/ for existing unclaimed task files (no `status: claimed`, `status: in-progress`, or `status: done`)
-      2. If unclaimed tasks exist, pick the oldest one, set `status: claimed` in the file, and emit requirements.curated
-      3. If no tasks exist, check PROMPT.md for raw requirements or ideas
-      4. Break raw requirements into individual task files in docs/todo/
+      1. Check PROMPT.md for raw requirements or ideas
+      2. If PROMPT.md has new work, break each into individual task files in docs/todo/ and remove the curated items from PROMPT.md
+      3. Check docs/todo/ for existing unclaimed task files (no `status: claimed`, `status: in-progress`, or `status: done`)
+      4. If unclaimed tasks exist, pick the highest-priority one (foundation > high > normal > low, oldest first within same priority), set `status: claimed`, and emit requirements.curated
       5. If the queue is empty and PROMPT.md has no new work, emit queue.empty
 
       ## UX Triage (when triggered by ux.triage or ux.blocked)
