feat(loop): add auto-merge support and integrate ralph task tracker
- Add features.auto_merge: true to all ralph config files
- Move auto_merge from event_loop to correct features section in ralph-ux.yml
- Update Apu to detect worktree and skip tagging (defer to post-merge)
- Integrate ralph tools task add/close into Marge and Maggie
- Remove premature task archival from Homer (Maggie owns closure)

--- a/ralph-audit-done.yml
+++ b/ralph-audit-done.yml
@@ -18,6 +18,9 @@ event_loop:
   checkpoint_interval: 5
   prompt_file: "PROMPT.md"
 
+features:
+  auto_merge: true
+
 core:
   guardrails:
     - "Read-first — verify against the actual codebase, not memory"
