--- a/ralph-curate.yml
+++ b/ralph-curate.yml
@@ -15,6 +15,9 @@ event_loop:
   checkpoint_interval: 1
   prompt_file: "PROMPT.md"
 
+features:
+  auto_merge: true
+
 core:
   specs_dir: "./docs/specs/"
   guardrails:
