--- a/ralph-observe.yml
+++ b/ralph-observe.yml
@@ -18,6 +18,9 @@ event_loop:
   checkpoint_interval: 1
   prompt_file: "PROMPT.md"
 
+features:
+  auto_merge: true
+
 core:
   guardrails:
     - "Evidence before changes — never tune on a single data point"
