--- a/ralph-bugfix.yml
+++ b/ralph-bugfix.yml
@@ -19,6 +19,9 @@ event_loop:
   checkpoint_interval: 2
   prompt_file: "PROMPT.md"
 
+features:
+  auto_merge: true
+
 core:
   specs_dir: "./docs/specs/"
   guardrails:
